[gd_scene load_steps=10 format=2]

[ext_resource path="res://Audio/Effects/Explosion.wav" type="AudioStream" id=1]
[ext_resource path="res://Audio/Effects/SuddenDeath.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/Music/Winning.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Music/Battle.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Effects/PickupItem.mp3" type="AudioStream" id=5]
[ext_resource path="res://Audio/Effects/PlaceBomb.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Effects/PlayerSteps.wav" type="AudioStream" id=7]
[ext_resource path="res://Scripts/System/AudioManager.gd" type="Script" id=8]
[ext_resource path="res://Audio/Music/Warning.wav" type="AudioStream" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 10.0

[node name="SuddenDeathTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="VictoryTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Step" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -40.0

[node name="Placebomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0

[node name="ItemPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0

[node name="Warning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
